tests/fixtures/invalid/pow_bool_none_int.py
# Cannot call pow() with Bool, None, Int
x = pow(True, None, 1)
